# vercel-fastapi

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
api/: auth.py  index.py  util.py
api/adapter/: supabase.py
api/entities/: errors.py  models.py  response.py
api/entity/: models.py
api/repositories/: __init__.py  license.py  log.py  user.py
api/repository/: user_repository.py
api/routes/: __init__.py  admin.py  auth.py  user.py
api/routes/debug/: response.py  routes.py
api/routes/user/: routes.py
api/service/: time.py  uid.py
sql/: ddl.sql
