[tool.poetry]
name = "vercel-fastapi"
version = "0.1.0"
description = ""
authors = ["anonymous <anonymous@localdomain.local>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
